basico do formulario de cadastro de usuário

--- a/app/config/application.ini
+++ b/app/config/application.ini
@@ -2,7 +2,7 @@
 timezone = America/Sao_Paulo
 language = pt
 application = template
-title = "Adianti Template"
+title = "Gerador de Palavras"
 theme = iquedev
 seed = 
 rest_key = 
