pronto para homologação e para colocar em produção

--- a/app/config/application.ini
+++ b/app/config/application.ini
@@ -1,10 +1,10 @@
 [general]
 timezone = America/Sao_Paulo
 language = pt
-application = template
+application = geradordepalavras
 title = "Gerador de Palavras"
 theme = iquedev
-seed = 
+seed = teste
 rest_key = 
 ;multiunit = "1"
 debug = 1
